# bb_scrape

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  changes.patch  team_names.txt
benches/: injuries.rs
scripts/: zip.ps1
scripts/mac-linux/: build.sh  setup.sh
scripts/windows/: build.ps1
src/: build.rs  cli.rs  cli_help.txt  csv.rs  data.rs  file.rs  get_teams.rs  gui.rs  gui_config.rs  html.rs  lib.rs  log.rs  macros.rs  main.rs  net.rs  params.rs  progress.rs  roster.rs  runner.rs  scrape.rs  store.rs  teams.rs
src/config/: app_options.rs  app_state.rs  consts.rs  mod.rs  options.rs  state.rs
src/core/: html.rs  mod.rs  net.rs  sanitize.rs  vischars.rs
src/engine/: engine.rs  mod.rs  types.rs
src/gui/: actions.rs  app.rs  mod.rs  progress.rs  router.rs  table_model.rs
src/gui/actions/: copy.rs  export.rs  mod.rs  scrape.rs
src/gui/components/: action_buttons.rs  data_table.rs  export_bar.rs  mod.rs  tabs.rs  team_panel.rs
src/gui/pages/: game_results.rs  injuries.rs  mod.rs  players.rs
src/scrape/: game_results.rs  injuries.rs  mod.rs  players.rs  scrape.rs  teams.rs
src/specs/: game_results.rs  mod.rs  players.rs  teams.rs
tests/: export_e2e.rs  export_options.rs  export_streams.rs  selection_view.rs
