# Cargo.toml

[package]
name = "bb_scrape"
version = "1.2.0"
edition = "2024"
authors = ["Imsvale"]
description = "GUI + CLI scraper for Brutalball"
license = "LICENSE-MIT"
repository = "https://github.com/Imsvale/bb_scrape"
homepage = "https://github.com/Imsvale/bb_scrape"
readme = "README.md"
keywords = ["scraper", "brutalball", "egui", "csv", "tsv", "rust-gui"]
categories = ["command-line-utilities", "gui", "parsing"]
default-run = "bb_scrape"
build = "src/build.rs"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "bb_scrape"  # GUI-only
path = "src/bin/gui.rs"

[dependencies]
# Use the OpenGL backend; smaller than wgpu
#eframe = { version = "0.32", default-features = false, features = ["glow", "default_fonts"] }
eframe = "0.32"

# Extras without auto-enabling image/svg/serde/etc.
egui_extras = { version = "0.32", default-features = false }

# Only decode PNG for the window icon (not JPEG/GIF/etc.)
image = { version = "0.25", default-features = false, features = ["png"] }

color-eyre = { version = "0.6", optional = true }

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
cli = ["dep:color-eyre"]

[profile.release]
lto = "thin"          # "fat" shrinks a bit more; slower compile
codegen-units = 1
#panic = "abort"       # no unwinding machinery
opt-level = "z"       # or "z" for min size; "3" if you want max perf
strip = "symbols"     # or "debuginfo"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "injuries"
harness = false
